[package]
name = "wanderball"
version = "0.1.0"
authors = ["Shea Newton <shnewto@gmail.com>"]
edition = "2018"

[dependencies]
amethyst = "0.15.0"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
time = "0.2.21"
rand = "0.7.3"
log = "0.4.11"

[features]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]